feat: enhance AuthCommand with Dropbox OAuth integration and update project configuration